sources += files(
    'Application.vala',
    'BaseNotebook.vala',
    'Export.vala',
    'Favorite.vala',
    'Favorites.vala',
    'FullTag.vala',
    'FullTags.vala',
    'MainWindow.vala',
    'MarkdownFuncs.vala',
    'Note.vala',
    'Notebook.vala',
    'NotebookTree.vala',
    'NoteItem.vala',
    'NoteItemPane.vala',
    'NoteItemPaneCode.vala',
    'NoteItemPaneImage.vala',
    'NoteItemPaneMarkdown.vala',
    'NoteItemPaneUML.vala',
    'NoteItemPanes.vala',
    'NotePanel.vala',
    'NotesPanel.vala',
    'Preferences.vala',
    'SidebarNew.vala',
    'SmartDateFilter.vala',
    'SmartFilter.vala',
    'SmartLogicFilter.vala',
    'SmartTextFilter.vala',
    'SmartNotebook.vala',
    'SmartNotebooks.vala',
    'SmartParser.vala',
    'SpellChecker.vala',
    'TagBox.vala',
    'TagEntry.vala',
    'Tags.vala',
    'Themes.vala',
    'ToolbarCode.vala',
    'ToolbarItem.vala',
    'ToolbarMarkdown.vala',
    'Utils.vala'
)

subdir('filters')
subdir('note_items')