sources += files(
    'Application.vala',
    'BaseNotebook.vala',
    'Export.vala',
    'Favorite.vala',
    'Favorites.vala',
    'FullTag.vala',
    'FullTags.vala',
    'Galleries.vala',
    'Gallery.vala',
    'GalleryItem.vala',
    'GalleryView.vala',
    'ImageView.vala',
    'Import.vala',
    'MainWindow.vala',
    'MarkdownFuncs.vala',
    'Note.vala',
    'Notebook.vala',
    'NotebookTree.vala',
    'NoteHistory.vala',
    'NoteItem.vala',
    'NoteItemPane.vala',
    'NoteItemPaneAssets.vala',
    'NoteItemPaneCode.vala',
    'NoteItemPaneImage.vala',
    'NoteItemPaneMarkdown.vala',
    'NoteItemPaneMath.vala',
    'NoteItemPaneTable.vala',
    'NoteItemPaneUML.vala',
    'NoteItemPanes.vala',
    'NotePanel.vala',
    'NoteParser.vala',
    # 'NoteSearch.vala',
    'NotesPanel.vala',
    'Preferences.vala',
    'SearchBox.vala',
    'Sidebar.vala',
    'SmartDateFilter.vala',
    'SmartFilter.vala',
    'SmartLogicFilter.vala',
    'SmartTextFilter.vala',
    'SmartNotebook.vala',
    'SmartNotebooks.vala',
    'SmartParser.vala',
    'SpellChecker.vala',
    'TagBox.vala',
    'TagEntry.vala',
    'Tags.vala',
    'TextBundle.vala',
    'Themes.vala',
    'UndoBuffer.vala',
    'UndoItem.vala',
    'Utils.vala'
)

subdir('filters')
subdir('gallery_items')
subdir('note_items')
subdir('undo')
