sources += files(
  'FilterAnd.vala',
  'FilterCreated.vala',
  'FilterFavorite.vala',
  'FilterItem.vala',
  'FilterItemText.vala',
  'FilterLocked.vala',
  'FilterNot.vala',
  'FilterNotebook.vala',
  'FilterOr.vala',
  'FilterTag.vala',
  'FilterTitle.vala',
  'FilterUpdated.vala',
  'FilterViewed.vala'
)