sources += files(
    'UndoItemAdd.vala',
    'UndoItemAssetsAdd.vala',
    'UndoItemAssetsRemove.vala',
    'UndoItemDelete.vala',
    'UndoItemDescChange.vala',
    'UndoItemImageChange.vala',
    'UndoItemMove.vala',
    'UndoItemTableDelCol.vala',
    'UndoItemTableInsCol.vala',
    'UndoNoteAdd.vala',
    'UndoNoteDelete.vala',
    'UndoTagAdd.vala',
    'UndoTagDelete.vala',
    'UndoTitleChange.vala'
)
