sources += files(
    'UndoItemAdd.vala',
    'UndoItemAssetsAdd.vala',
    'UndoItemAssetsRemove.vala',
    'UndoItemDelete.vala',
    'UndoItemDescChange.vala',
    'UndoItemImageChange.vala',
    'UndoItemMove.vala',
    'UndoItemTableColFormat.vala',
    'UndoItemTableDelCol.vala',
    'UndoItemTableDelRow.vala',
    'UndoItemTableInsCol.vala',
    'UndoItemTableInsRow.vala',
    'UndoNoteAdd.vala',
    'UndoNoteDelete.vala',
    'UndoNoteMove.vala',
    'UndoTagAdd.vala',
    'UndoTagDelete.vala',
    'UndoTitleChange.vala'
)
